# bird-sdk-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yaml  release.yaml
examples/: examples.gen.py  quickstart-email.py  quickstart-whatsapp.py
examples/python/: django.py  fastapi.py  flask.py  starlette.py
scripts/: generate_models.py  smoke.sh  surface_ops.py
src/bird/: __init__.py  _base_client.py  _caller.py  _caller_rules.py  _client.py  _constants.py  _event_types.py  _exceptions.py  _generated.py  _models.py  _response.py  _types.py  pagination.py
src/bird/resources/: __init__.py  audiences.py  contact_properties.py  contacts.py  domains.py  email.py  email_stats.py  email_templates.py  sms.py  sms_templates.py  verify.py  webhooks.py  whatsapp.py  whatsapp_templates.py
tests/: caller-detection-cases.json  test_alignment.py  test_base_client.py  test_client.py  test_detect_caller.py  test_email.py  test_exceptions.py  test_options.py  test_raw_response.py  test_surface_conformance_gen.py  test_webhooks.py
